<resources>
    <string name="app_name">PaintYourIdeas</string>
    <string name="clear">Clear All</string>
    <string name="size">Pen Size</string>
    <string name="clr">Pen Color</string>
    <string name="Pen">PEN</string>
    <string name="Eraser">ERASER</string>
    <string name="tools">Tools</string>
    <string name="abt">About</string>
    <string name="instruction">Instructions</string>
    <string name="ok">OK</string>
    <string name="sv">Save</string>
    <string name="y">YES</string>
    <string name="n">NO</string>
    <string name="ShowIns">Pop Up Instructions</string>
</resources>
