<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    >

    <com.example.mohgpa.paintyourideas.MyCanvasView
           android:id="@+id/canvastodraw"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:textColor="#FFFFFF"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp">


        <Button
            android:id="@+id/penButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:onClick="setPen"
            android:text="@string/Pen" />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@+id/penButton"
            android:layout_toRightOf="@+id/penButton"
            android:prompt="@string/size" />

        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/sizeSpinner"
            android:prompt="@string/clr" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tools"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:text="@string/tools"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/colorSpinner"
            android:onClick="setEraser"
            android:text="@string/Eraser" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="clearTheCanvas"
            android:text="@string/clear" />

    </RelativeLayout>

</FrameLayout>